--- a/package.json
+++ b/package.json
@@ -3,15 +3,25 @@
   "version": "1.0.0",
   "description": "make a chat application",
   "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kjell1995/chatapp_test.git"
+  },
+  "keywords": [
+    "chat"
+  ],
+  "author": "Kjell Deboysere",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kjell1995/chatapp_test/issues"
+  },
+  "homepage": "https://github.com/kjell1995/chatapp_test#readme",
   "dependencies": {
     "express": "^4.14.0",
-    "pug": "^2.0.0-beta6",
     "socket.io": "^1.5.1"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "kjell deboysere",
-  "license": "ISC"
+  }
 }
